--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -7,7 +7,7 @@
     "node_modules"
   ],
   "compilerOptions": {
-    "moduleResolution": "bundler",
+    "moduleResolution": "NodeNext",
     "allowSyntheticDefaultImports": true
   }
 }
