--- a/packages/validators/package.json
+++ b/packages/validators/package.json
@@ -5,6 +5,12 @@
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
+  "scripts": {
+    "build": "tsc",
+    "check-types": "tsc --noEmit",
+    "lint": "eslint src --ext .ts,.tsx",
+    "clean": "rm -rf dist"
+  },
   "devDependencies": {
     "@pocket-pixie/typescript-config": "workspace:*",
     "typescript": "^5.9.2"
