--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -8,10 +8,18 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build:staging": "EXPO_PROFILE=staging expo export --platform all",
+    "build:production": "EXPO_PROFILE=production expo export --platform all",
+    "start:staging": "EXPO_PROFILE=staging expo start",
+    "start:production": "EXPO_PROFILE=production expo start",
+    "start:device": "EXPO_PUBLIC_ENV=device expo start",
+    "clean": "rm -rf .expo .expo-shared .metro node_modules/.cache"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.0.0",
     "@expo/vector-icons": "^14.1.0",
+    "@pocket-pixie/auth": "workspace:^",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -39,6 +47,7 @@
     "@rn-primitives/toggle": "^1.2.0",
     "@rn-primitives/toggle-group": "^1.2.0",
     "@rn-primitives/tooltip": "^1.2.0",
+    "better-auth": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.22",
@@ -49,6 +58,7 @@
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
