--- a/package.json
+++ b/package.json
@@ -3,10 +3,20 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
+    "build:api": "turbo run build --filter=api",
+    "build:mobile": "turbo run build --filter=mobile",
+    "build:packages": "turbo run build --filter='./packages/*'",
     "dev": "turbo run dev",
+    "dev:api": "turbo run dev --filter=api",
+    "dev:mobile": "turbo run dev --filter=mobile",
     "lint": "turbo run lint",
+    "lint:fix": "turbo run lint -- --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "db:generate": "turbo run db:generate --filter=db",
+    "db:migrate": "turbo run db:migrate --filter=db",
+    "clean": "turbo run clean 2>/dev/null || true && rm -rf node_modules/.cache",
+    "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.52.6",
