some monorepo fixes

--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "lint:fix": "turbo run lint -- --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
-    "db:generate": "turbo run db:generate --filter=db",
-    "db:migrate": "turbo run db:migrate --filter=db",
+    "db:generate": "turbo run db:generate --filter=@pocket-pixie/db",
+    "db:migrate": "turbo run db:migrate --filter=@pocket-pixie/db",
+    "auth:db:generate": "turbo run db:generate --filter=@pocket-pixie/auth",
+    "auth:db:migrate": "turbo run db:migrate --filter=@pocket-pixie/auth",
+    "db:generate:all": "turbo run db:generate --filter=@pocket-pixie/db && turbo run db:generate --filter=@pocket-pixie/auth",
+    "db:migrate:all": "turbo run db:migrate --filter=@pocket-pixie/db && turbo run db:migrate --filter=@pocket-pixie/auth",
     "clean": "turbo run clean 2>/dev/null || true && rm -rf node_modules/.cache",
     "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache"
   },
