--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -85,7 +85,7 @@
     "eslint-config-expo": "~9.2.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.8.3"
+    "typescript": "^5.9.2"
   },
   "private": true
 }
