--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -3,16 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "main": "./base.mjs",
   "files": [
     "base.mjs",
     "react.mjs"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.15.0",
     "@eslint-react/eslint-plugin": "^1.52.6",
     "@typescript-eslint/eslint-plugin": "^8.41.0",
     "@typescript-eslint/parser": "^8.41.0",
     "eslint-config-prettier": "^9.1.2",
     "eslint-config-turbo": "^2.5.6",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.15.0"
   }
 }
