--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "@pocket-pixie/typescript-config/base.json",
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"],
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src"
+  }
 }
