--- a/turbo.json
+++ b/turbo.json
@@ -28,6 +28,14 @@
       "cache": false,
       "dependsOn": ["db:generate"]
     },
+    "auth:db:generate": {
+      "cache": false,
+      "dependsOn": []
+    },
+    "auth:db:migrate": {
+      "cache": false,
+      "dependsOn": ["auth:db:generate"]
+    },
     "start": {
       "cache": false,
       "persistent": true,
