--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,25 +4,39 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "dev": "bun --watch --port 3000 src/index.ts",
     "start": "bun dist/index.js",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
-    "clean": "rm -rf dist"
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "clean": "rm -rf dist",
+    "db:generate": "pnpm run -w db:generate",
+    "db:migrate": "pnpm run -w db:migrate",
+    "auth:db:generate": "pnpm run -w auth:db:generate",
+    "auth:db:migrate": "pnpm run -w auth:db:migrate",
+    "db:generate:all": "pnpm run -w db:generate:all",
+    "db:migrate:all": "pnpm run -w db:migrate:all",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\""
   },
   "dependencies": {
     "@pocket-pixie/auth": "workspace:^",
     "@pocket-pixie/db": "workspace:^",
     "@pocket-pixie/validators": "workspace:^",
-    "hono": "^4.9.4"
+    "drizzle-orm": "^0.44.5",
+    "hono": "^4.9.4",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@pocket-pixie/eslint-config": "workspace:^",
     "@pocket-pixie/typescript-config": "workspace:^",
     "bun-types": "^1.2.21",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.9.2",
+    "vite": "^7.1.3",
     "vitest": "^3.2.4"
   }
 }
