--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "build:api": "turbo run build --filter=api",
+    "build:api": "turbo run build --filter=api && cd apps/api && tsc-alias",
     "build:mobile": "turbo run build --filter=mobile",
     "build:packages": "turbo run build --filter='./packages/*'",
     "dev": "turbo run dev",
@@ -20,7 +20,8 @@
     "db:generate:all": "turbo run db:generate --filter=@pocket-pixie/db && turbo run db:generate --filter=@pocket-pixie/auth",
     "db:migrate:all": "turbo run db:migrate --filter=@pocket-pixie/db && turbo run db:migrate --filter=@pocket-pixie/auth",
     "clean": "turbo run clean 2>/dev/null || true && rm -rf node_modules/.cache",
-    "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache"
+    "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache",
+    "postbuild": "tsc-alias"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.52.6",
@@ -29,6 +30,7 @@
     "eslint-config-prettier": "^9.1.2",
     "eslint-config-turbo": "^2.5.6",
     "prettier": "^3.6.2",
+    "tsc-alias": "^1.8.16",
     "turbo": "^2.5.6",
     "typescript": "5.9.2"
   },
