--- a/packages/validators/tsconfig.json
+++ b/packages/validators/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "@pocket-pixie/typescript-config/base.json",
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", "**/*.test.ts", "**/*.spec.ts"],
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src"
