--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,27 +6,20 @@
   "scripts": {
     "build": "tsc && tsc-alias",
     "dev": "bun --watch --port 3000 src/index.ts",
-    "start": "bun dist/index.js",
+    "serve": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
-    "check-types": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "clean": "rm -rf dist",
-    "db:generate": "pnpm run -w db:generate",
-    "db:migrate": "pnpm run -w db:migrate",
-    "auth:db:generate": "pnpm run -w auth:db:generate",
-    "auth:db:migrate": "pnpm run -w auth:db:migrate",
-    "db:generate:all": "pnpm run -w db:generate:all",
-    "db:migrate:all": "pnpm run -w db:migrate:all",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\""
+    "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@hono/zod-openapi": "^1.1.0",
     "@pocket-pixie/auth": "workspace:^",
     "@pocket-pixie/db": "workspace:^",
     "@pocket-pixie/validators": "workspace:^",
-    "drizzle-orm": "^0.44.5",
+    "@scalar/hono-api-reference": "^0.9.16",
+    "awilix": "^12.0.5",
     "hono": "^4.9.4",
     "zod": "^4.1.3"
   },
@@ -35,6 +28,7 @@
     "@pocket-pixie/typescript-config": "workspace:^",
     "bun-types": "^1.2.21",
     "tsc-alias": "^1.8.16",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.3",
     "vitest": "^3.2.4"
