--- a/package.json
+++ b/package.json
@@ -3,25 +3,17 @@
   "private": true,
   "scripts": {
     "build": "turbo run build",
-    "build:api": "turbo run build --filter=api && cd apps/api && tsc-alias",
-    "build:mobile": "turbo run build --filter=mobile",
-    "build:packages": "turbo run build --filter='./packages/*'",
     "dev": "turbo run dev",
-    "dev:api": "turbo run dev --filter=api",
-    "dev:mobile": "turbo run dev --filter=mobile",
+    "dev:server": "turbo run dev --filter=api --filter=@pocket-pixie/db",
+    "serve": "turbo run serve",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint -- --fix",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "check-types": "turbo run check-types",
     "db:generate": "turbo run db:generate --filter=@pocket-pixie/db",
     "db:migrate": "turbo run db:migrate --filter=@pocket-pixie/db",
-    "auth:db:generate": "turbo run db:generate --filter=@pocket-pixie/auth",
-    "auth:db:migrate": "turbo run db:migrate --filter=@pocket-pixie/auth",
-    "db:generate:all": "turbo run db:generate --filter=@pocket-pixie/db && turbo run db:generate --filter=@pocket-pixie/auth",
-    "db:migrate:all": "turbo run db:migrate --filter=@pocket-pixie/db && turbo run db:migrate --filter=@pocket-pixie/auth",
     "clean": "turbo run clean 2>/dev/null || true && rm -rf node_modules/.cache",
-    "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache",
-    "postbuild": "tsc-alias"
+    "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^1.52.6",
@@ -32,7 +24,7 @@
     "prettier": "^3.6.2",
     "tsc-alias": "^1.8.16",
     "turbo": "^2.5.6",
-    "typescript": "5.9.2"
+    "typescript": "^5.9.2"
   },
   "prettier": "@pocket-pixie/prettier-config",
   "packageManager": "pnpm@10.15.0",
