--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -3,6 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "dev": "expo start --port 8082 || echo 'Mobile dev server already running - check existing terminal'",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -19,7 +20,6 @@
   "dependencies": {
     "@better-auth/expo": "^1.0.0",
     "@expo/vector-icons": "^14.1.0",
-    "@pocket-pixie/auth": "workspace:^",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
