--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "dev:server": "turbo run dev --filter=api --filter=@pocket-pixie/db",
+    "dev:mobile": "turbo run dev --filter=mobile",
     "serve": "turbo run serve",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint -- --fix",
