--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "dev:server": "turbo run dev --filter=api --filter=@pocket-pixie/db",
-    "dev:mobile": "turbo run dev --filter=mobile",
+    "dev:server": "turbo run dev --filter=@pocket-pixie/api --filter=@pocket-pixie/db",
+    "dev:mobile": "turbo run dev --filter=@pocket-pixie/mobile",
     "serve": "turbo run serve",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint -- --fix",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "check-types": "turbo run check-types",
     "db:generate": "turbo run db:generate --filter=@pocket-pixie/db",
     "db:migrate": "turbo run db:migrate --filter=@pocket-pixie/db",
