--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,18 +1,9 @@
 {
   "extends": "@pocket-pixie/typescript-config/base.json",
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts",
-    "**/*.spec.ts",
-  ],
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
   "compilerOptions": {
-    "lib": [
-      "ESNext"
-    ],
+    "lib": ["ESNext"],
     "allowSyntheticDefaultImports": true,
     "target": "ESNext",
     "module": "ESNext",
@@ -33,9 +24,7 @@
     "noPropertyAccessFromIndexSignature": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   }
 }
