--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "dev": "bun --watch --port 3000 src/index.ts 2>/dev/null || echo 'API server already running on port 3000 - visit http://localhost:3000'",
+    "dev": "bun --watch --port 3000 src/index.ts",
     "serve": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -16,9 +16,9 @@
   "dependencies": {
     "@hono/zod-openapi": "^1.1.0",
     "@pocket-pixie/db": "workspace:^",
-    "@pocket-pixie/validators": "workspace:^",
     "@scalar/hono-api-reference": "^0.9.16",
     "awilix": "^12.0.5",
+    "drizzle-orm": "^0.44.5",
     "hono": "^4.9.4",
     "zod": "^4.1.3"
   },
