--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -18,10 +18,12 @@
   },
   "dependencies": {
     "@better-auth/expo": "^1.0.0",
+    "@hono/zod-openapi": "^1.1.0",
     "@libsql/client": "^0.15.14",
     "better-auth": "^1.0.0",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
+    "ioredis": "^5.7.0",
     "zod": "^4.1.3"
   },
   "devDependencies": {
