--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "@scalar/hono-api-reference": "^0.9.16",
     "awilix": "^12.0.5",
     "drizzle-orm": "^0.44.5",
+    "drizzle-zod": "^0.8.3",
     "hono": "^4.9.4",
     "zod": "^4.1.3"
   },
