--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pocket-pixie",
   "private": true,
   "scripts": {
+    "android": "turbo run android --filter=@pocket-pixie/mobile",
     "build": "turbo run build",
     "dev": "turbo run dev",
     "dev:server": "turbo run dev --filter=@pocket-pixie/api --filter=@pocket-pixie/db",
@@ -26,7 +27,7 @@
     "prettier": "^3.6.2",
     "tsc-alias": "^1.8.16",
     "turbo": "^2.5.6",
-    "typescript": "^5.9.2"
+    "typescript": "~5.8.3"
   },
   "prettier": "@pocket-pixie/prettier-config",
   "packageManager": "pnpm@10.15.0",
