--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@google/genai": "^1.17.0",
     "@hono/zod-openapi": "^1.1.0",
     "@pocket-pixie/db": "workspace:^",
     "@scalar/hono-api-reference": "^0.9.16",
