moved db package and fixed auth initial seed

--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
     "android": "turbo run android --filter=@pocket-pixie/mobile",
     "build": "turbo run build",
     "dev": "turbo run dev",
-    "dev:server": "turbo run dev --filter=@pocket-pixie/api --filter=@pocket-pixie/db",
+    "dev:server": "turbo run dev --filter=@pocket-pixie/api",
     "dev:mobile": "turbo run dev --filter=@pocket-pixie/mobile",
     "serve": "turbo run serve",
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint -- --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
     "check-types": "turbo run check-types",
-    "db:push": "turbo run db:push --filter=@pocket-pixie/db",
-    "db:generate": "turbo run db:generate --filter=@pocket-pixie/db",
-    "db:migrate": "turbo run db:migrate --filter=@pocket-pixie/db",
-    "db:seed": "turbo run db:seed --filter=@pocket-pixie/db",
+    "db:push": "turbo run db:push --filter=@pocket-pixie/api",
+    "db:generate": "turbo run db:generate --filter=@pocket-pixie/api",
+    "db:migrate": "turbo run db:migrate --filter=@pocket-pixie/api",
+    "db:seed": "turbo run db:seed --filter=@pocket-pixie/api",
     "clean": "turbo run clean 2>/dev/null || true && rm -rf node_modules/.cache",
     "clean:all": "pnpm -r exec rm -rf dist node_modules/.cache .expo .expo-shared .metro && rm -rf node_modules/.cache"
   },
