--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,29 +5,41 @@
   "type": "module",
   "scripts": {
     "build": "tsc && tsc-alias",
-    "dev": "bun --watch --port 3000 src/index.ts",
+    "dev": "concurrently \"turso dev --db-file local.db || echo 'Turso dev server already running'\" \"drizzle-kit studio || echo 'Drizzle Studio already running'\" \"bun --watch --port 3000 src/index.ts\"",
     "serve": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "db:run": "turso dev --db-file local.db",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx seed.ts"
   },
   "dependencies": {
+    "@better-auth/expo": "^1.3.7",
     "@google/genai": "^1.17.0",
     "@hono/zod-openapi": "^1.1.0",
-    "@pocket-pixie/db": "workspace:^",
+    "@libsql/client": "^0.15.14",
     "@scalar/hono-api-reference": "^0.9.16",
     "awilix": "^12.0.5",
+    "better-auth": "^1.0.0",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
     "hono": "^4.9.4",
+    "ioredis": "^5.7.0",
     "zod": "^4.1.3"
   },
   "devDependencies": {
     "@pocket-pixie/eslint-config": "workspace:^",
     "@pocket-pixie/typescript-config": "workspace:^",
+    "@types/node": "^24.3.0",
     "bun-types": "^1.2.21",
+    "concurrently": "^9.2.1",
+    "drizzle-kit": "^0.31.4",
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
